add prometheus add jaeger add kafka add zookeeper
