# pkg/ocp-certificate-api/ocp-certificate-api.pb.gw.go
@@ -33,6 +33,40 @@ var _ = utilities.NewDoubleArray
 var _ = descriptor.ForMessage
 var _ = metadata.Join
 
+func request_OcpCertificateApi_MultiCreateCertificatesV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpCertificateApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateCertificatesV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MultiCreateCertificatesV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OcpCertificateApi_MultiCreateCertificatesV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpCertificateApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateCertificatesV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MultiCreateCertificatesV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_OcpCertificateApi_CreateCertificateV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpCertificateApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq CreateCertificateV1Request
 	var metadata runtime.ServerMetadata
@@ -251,6 +285,29 @@ func local_request_OcpCertificateApi_RemoveCertificateV1_0(ctx context.Context, 
 // Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterOcpCertificateApiHandlerFromEndpoint instead.
 func RegisterOcpCertificateApiHandlerServer(ctx context.Context, mux *runtime.ServeMux, server OcpCertificateApiServer) error {
 
+	mux.Handle("POST", pattern_OcpCertificateApi_MultiCreateCertificatesV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OcpCertificateApi_MultiCreateCertificatesV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpCertificateApi_MultiCreateCertificatesV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_OcpCertificateApi_CreateCertificateV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -407,6 +464,26 @@ func RegisterOcpCertificateApiHandler(ctx context.Context, mux *runtime.ServeMux
 // "OcpCertificateApiClient" to call the correct interceptors.
 func RegisterOcpCertificateApiHandlerClient(ctx context.Context, mux *runtime.ServeMux, client OcpCertificateApiClient) error {
 
+	mux.Handle("POST", pattern_OcpCertificateApi_MultiCreateCertificatesV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OcpCertificateApi_MultiCreateCertificatesV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpCertificateApi_MultiCreateCertificatesV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_OcpCertificateApi_CreateCertificateV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -511,18 +588,22 @@ func RegisterOcpCertificateApiHandlerClient(ctx context.Context, mux *runtime.Se
 }
 
 var (
-	pattern_OcpCertificateApi_CreateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_MultiCreateCertificatesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_GetCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificates", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_CreateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
+
+	pattern_OcpCertificateApi_GetCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificate", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_OcpCertificateApi_ListCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_UpdateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_UpdateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_RemoveCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificates", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_RemoveCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificate", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
+	forward_OcpCertificateApi_MultiCreateCertificatesV1_0 = runtime.ForwardResponseMessage
+
 	forward_OcpCertificateApi_CreateCertificateV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpCertificateApi_GetCertificateV1_0 = runtime.ForwardResponseMessage
